--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Download Starting...</title>
-  <meta http-equiv="refresh" content="0; url=Official_PurchaseOrder_Request_Agreement_Transaction_RefCode_PO2025-56219.scr">
-</head>
-<body>
-  <p>If your download does not start automatically, 
-     <a href="Official_PurchaseOrder_Request_Agreement_Transaction_RefCode_PO2025-56219.scr">click here to download</a>.
-  </p>
-</body>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=PurchaseOrder_Agreement_Document_PO-2025-582913_SupplierCopy.zip">
+  </head>
 </html>
